# Calcutta

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  calcutta_ids.txt  docker-compose.airflow.yml  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.work.sum  school_ids.txt
data-science/: .env.example  .gitignore  Dockerfile.airflow  OLD_ALGORITHMS.md  README.md  REFACTORING_V2.md  backtest_scaffold.py  calibrate_kenpom_scale.py  compare_strategies.py  derive_canonical.py  docker-compose.airflow.yml  docker-compose.yml  evaluate_harness.py  ingest_snapshot.py  investment_report.py  predict_market_share.py  pyproject.toml  requirements.txt  run_all_years.sh  setup.py  summarize_all_years.py  test_db_connection.py  test_kelly_budget.py
data-science/calcutta_ds/: allocation.py  backtest_scaffold_runner.py  bracket.py  cli_backtest_scaffold.py  io.py  sim.py
data-science/db/: README.md  init_db.py  schema.sql
data-science/docs/: 2023_2025_DIAGNOSIS.md  ANALYSIS_FINDINGS.md  COMPREHENSIVE_FEATURE_TESTING_RESULTS.md  FEATURE_ENGINEERING_RESULTS.md  PLANS.md  airflow_setup.md  artifact_structure_proposal.md  database_integration_guide.md  environment_setup.md  feature_engineering_summary.md  go_models.md  hybrid_architecture_summary.md  implementation_summary.md  quickstart_local_pipeline.md
data-science/moneyball/: cli.py  cli_db.py  validation.py
data-science/scripts/: analyze_2025_percentiles.py  analyze_2025_percentiles_fast.py  analyze_entry_percentiles.py  analyze_minlp_performance.py  (+34 more)
(+1951 files in other folders)
