[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyball"
version = "0.1.0"
description = "NCAA Tournament Calcutta Analytics Pipeline"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = ["pip-tools>=7.0.0", "pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["moneyball*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
